# irgesv_jax

./: CMakeLists.txt  README.md  benchmark.py  tests.py
src/: irgesv.cu  irgesv.py  solver_interface.cc  solver_interface.h
